File server set up is done for this project save files and chnages in the project is also done.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,25 @@ spring.jpa.show-sql=true
 
 #spring.mvc.static-path-pattern=/images/**
 
+#prod
+#resourceLocation
+resource.location=file:/RcsqaureTech/rcsquaretech-images/
+#imageDirPath
+image.dir.path=/home/chaitanya/RcsqaureTech/rcsquaretech-images/
+spring.web.resources.static-locations=file:/home/chaitanya/RcsqaureTech/rcsquaretech-images/
+
+#local
+#resource.location=classpath:/static/images/
+#imageDirPath
+#image.dir.path=file:${user.dir}/src/main/resources/static/images/
+
+
+
+#local
+#rcsquaretech.files.path=http://localhost:8080/images/
+
+rcsquaretech.files.path=https://files.rcsquaretech.com/images/
+
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
 
